welcome.lessons.welcome.bat.bool2.CigarParty.scala.error
cigarParty:4: error: not found: value isWeekEnd
	else if (isWeekEnd) return true
                 ^