welcome.lessons.welcome.bat.bool2.CigarParty.scala.code
def cigarParty(cigars:Int, isWeekend:Boolean):Boolean = {
	if (cigars<=40) return false
	else if (cigars<=60) return true
	else if (isWeekEnd) return true
	else return false
}